Remove factory girl and use fixture instead

--- a/test/fixtures/contacts.yml
+++ b/test/fixtures/contacts.yml
@@ -20,12 +20,14 @@
 #  index_contacts_on_company_id  (company_id)
 #
 
-FactoryGirl.define do
-  factory :contact do
-    company nil
-    name "MyString"
-    role "MyString"
-    contact_number "MyString"
-    email "MyString"
-  end
-end
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
