--- a/test/fixtures/contacts.yml
+++ b/test/fixtures/contacts.yml
@@ -26,8 +26,16 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  company: apple
+  name: Apple Contact
+  role: Manager
+  contact_number: 0123456789
+  email: contact@apple.com
+
+two:
+  company: google
+  name: Google Contact
+  role: Manager
+  contact_number: 0123456789
+  email: contact@gmail.com
