--- a/test/fixtures/welfares.yml
+++ b/test/fixtures/welfares.yml
@@ -5,11 +5,11 @@
 #  id               :integer          not null, primary key
 #  job_id           :integer
 #  training         :boolean
-#  training_detail  :text
+#  training_detail  :text(65535)
 #  accomodation     :boolean
 #  free_food        :boolean
-#  free_food_detail :text
-#  other_benefits   :text
+#  free_food_detail :text(65535)
+#  other_benefits   :text(65535)
 #  allowance        :decimal(8, 2)
 #  created_at       :datetime         not null
 #  updated_at       :datetime         not null
@@ -17,6 +17,10 @@
 # Indexes
 #
 #  index_welfares_on_job_id  (job_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (job_id => jobs.id)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
