--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "rails-erb-loader": "^5.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react_ujs": "^2.2.1",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
+    "semantic-ui-react": "^0.71.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
     "webpack-manifest-plugin": "^1.2.1",
